--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,14 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+#test:
+#  adapter: mysql2
+#  database: redmine_test
+#  host: localhost
+#  username: root
+#  password: ""
+#  encoding: utf8
+
 test:
   adapter: mysql2
   database: redmine_test
@@ -39,7 +47,7 @@ test:
 #  password: "postgres"
 
 # SQLite3 configuration example
-#production:
+#development:
 #  adapter: sqlite3
 #  database: db/redmine.sqlite3
 
